--- a/nx.json
+++ b/nx.json
@@ -33,6 +33,9 @@
     "webapp-e2e": {
       "tags": [],
       "implicitDependencies": ["webapp"]
+    },
+    "webservice": {
+      "tags": []
     }
   }
 }
