--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "start": "nx serve",
-    "build": "nx build",
-    "test": "nx test",
+    "start:step1": "nx serve webservice",
+    "start:step2": "wait-on tcp:3333 && nx serve webapp",
+    "start": "run-p start:step1 start:step2",
     "postinstall": "ngcc --properties es2015 browser module main"
   },
   "private": true,
@@ -52,6 +52,7 @@
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
     "prettier": "^2.3.1",
-    "typescript": "~4.3.5"
+    "typescript": "~4.3.5",
+    "wait-on": "^5.3.0"
   }
 }
