let it as it is

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,7 +14,10 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "@agrid/common/requests": ["libs/common-requests/src/index.ts"],
+      "@agrid/common/responses": ["libs/common-responses/src/index.ts"]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
