--- a/nx.json
+++ b/nx.json
@@ -27,6 +27,12 @@
     ]
   },
   "projects": {
+    "common-requests": {
+      "tags": []
+    },
+    "common-responses": {
+      "tags": []
+    },
     "webapp": {
       "tags": []
     },
