--- a/package.json
+++ b/package.json
@@ -18,11 +18,22 @@
     "@angular/platform-browser": "^12.2.0",
     "@angular/platform-browser-dynamic": "^12.2.0",
     "@angular/router": "^12.2.0",
-    "@nestjs/common": "^7.0.0",
-    "@nestjs/core": "^7.0.0",
-    "@nestjs/platform-express": "^7.0.0",
+    "@nestjs-modules/mailer": "^1.5.1",
+    "@nestjs/common": "^7.6.15",
+    "@nestjs/config": "^0.5.0",
+    "@nestjs/core": "^7.6.15",
+    "@nestjs/jwt": "^7.2.0",
+    "@nestjs/passport": "^7.1.5",
+    "@nestjs/platform-fastify": "^7.6.15",
+    "@nestjs/serve-static": "^2.1.4",
+    "@nestjs/swagger": "^4.8.0",
+    "@nestjs/typeorm": "^7.1.5",
+    "class-validator": "^0.13.2",
+    "dateformat": "^5.0.2",
+    "helmet": "^4.4.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~6.6.0",
+    "swagger-ui-express": "^4.2.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
   },
