--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "agrid",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "license": "MIT",
   "scripts": {
     "start:step1": "nx serve webservice",
@@ -28,13 +28,26 @@
     "@nestjs/serve-static": "^2.1.4",
     "@nestjs/swagger": "^4.8.0",
     "@nestjs/typeorm": "^7.1.5",
-    "class-validator": "^0.13.2",
-    "dateformat": "^5.0.2",
+    "bcrypt": "^5.0.1",
+    "class-validator": "^0.12.2",
+    "cross-env": "^7.0.3",
+    "dataloader": "^2.0.0",
+    "date-fns": "^2.19.0",
+    "dateformat": "^4.5.1",
+    "handlebars": "^4.7.7",
     "helmet": "^4.4.1",
+    "mysql": "^2.18.1",
+    "nodemailer": "^6.5.0",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "~6.6.0",
-    "swagger-ui-express": "^4.2.0",
+    "rxjs": "^6.6.6",
+    "ts-loader": "^8.0.18",
+    "tsconfig-paths": "^3.9.0",
     "tslib": "^2.0.0",
+    "typeorm": "^0.2.31",
+    "typeorm-uml": "^1.6.2",
+    "validator": "^13.5.2",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
