--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,6 +15,9 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@workspace/angular/components/blockablediv": [
+        "libs/angular-components-blockablediv/src/index.ts"
+      ],
       "@workspace/common/regexp": ["libs/common-regexp/src/index.ts"],
       "@workspace/common/requests": ["libs/common-requests/src/index.ts"],
       "@workspace/common/responses": ["libs/common-responses/src/index.ts"]
