--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^12.2.0",
+    "@angular/animations": "^12.2.8",
+    "@angular/cdk": "^12.2.9",
     "@angular/common": "^12.2.0",
     "@angular/compiler": "^12.2.0",
     "@angular/core": "^12.2.0",
@@ -48,7 +49,10 @@
     "typeorm": "^0.2.31",
     "typeorm-uml": "^1.6.2",
     "validator": "^13.5.2",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.11.4",
+    "primeflex": "^3.1.0",
+    "primeicons": "^4.1.0",
+    "primeng": "^12.2.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.2.0",
@@ -75,6 +79,7 @@
     "eslint": "7.22.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
+    "ng-packagr": "^12.1.1",
     "prettier": "^2.3.1",
     "typescript": "~4.3.5",
     "wait-on": "^5.3.0"
