--- a/package.json
+++ b/package.json
@@ -25,22 +25,27 @@
     "@nestjs/core": "^7.6.15",
     "@nestjs/jwt": "^7.2.0",
     "@nestjs/passport": "^7.1.5",
-    "@nestjs/platform-fastify": "^7.6.15",
+    "@nestjs/platform-fastify": "^7.6.18",
     "@nestjs/serve-static": "^2.1.4",
     "@nestjs/swagger": "^4.8.0",
     "@nestjs/typeorm": "^7.1.5",
     "bcrypt": "^5.0.1",
+    "class-transformer": "^0.4.0",
     "class-validator": "^0.12.2",
     "cross-env": "^7.0.3",
     "dataloader": "^2.0.0",
     "date-fns": "^2.19.0",
     "dateformat": "^4.5.1",
+    "fastify-swagger": "^4.12.6",
     "handlebars": "^4.7.7",
     "helmet": "^4.4.1",
     "mysql": "^2.18.1",
     "nodemailer": "^6.5.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
+    "primeflex": "^3.1.0",
+    "primeicons": "^4.1.0",
+    "primeng": "^12.2.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^6.6.6",
     "ts-loader": "^8.0.18",
@@ -49,10 +54,7 @@
     "typeorm": "^0.2.31",
     "typeorm-uml": "^1.6.2",
     "validator": "^13.5.2",
-    "zone.js": "~0.11.4",
-    "primeflex": "^3.1.0",
-    "primeicons": "^4.1.0",
-    "primeng": "^12.2.2"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.2.0",
