--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -18,9 +18,13 @@
       "@workspace/angular/components/blockablediv": [
         "libs/angular-components-blockablediv/src/index.ts"
       ],
+      "@workspace/common/extension/winston": [
+        "libs/common-extension-winston/src/index.ts"
+      ],
       "@workspace/common/regexp": ["libs/common-regexp/src/index.ts"],
       "@workspace/common/requests": ["libs/common-requests/src/index.ts"],
-      "@workspace/common/responses": ["libs/common-responses/src/index.ts"]
+      "@workspace/common/responses": ["libs/common-responses/src/index.ts"],
+      "@workspace/winston/transports": ["libs/winston-transports/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
