--- a/nx.json
+++ b/nx.json
@@ -30,6 +30,9 @@
     "angular-components-blockablediv": {
       "tags": []
     },
+    "common-entities": {
+      "tags": []
+    },
     "common-regexp": {
       "tags": []
     },
