--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -18,6 +18,7 @@
       "@workspace/angular/components/blockablediv": [
         "libs/angular-components-blockablediv/src/index.ts"
       ],
+      "@workspace/common/entities": ["libs/common-entities/src/index.ts"],
       "@workspace/common/extension/winston": [
         "libs/common-extension-winston/src/index.ts"
       ],
