--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nestjs/serve-static": "^2.1.4",
     "@nestjs/swagger": "^4.8.0",
     "@nestjs/typeorm": "^7.1.5",
+    "@stripe/stripe-js": "^1.21.2",
     "bcrypt": "^5.0.1",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.12.2",
@@ -50,6 +51,7 @@
     "primeng": "^12.2.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^6.6.6",
+    "stripe": "^8.191.0",
     "ts-loader": "^8.0.18",
     "tsconfig-paths": "^3.9.0",
     "tslib": "^2.0.0",
