--- a/apps/webapp/.eslintrc.json
+++ b/apps/webapp/.eslintrc.json
@@ -13,7 +13,7 @@
           "error",
           {
             "type": "attribute",
-            "prefix": "agrid",
+            "prefix": "app",
             "style": "camelCase"
           }
         ],
@@ -21,7 +21,7 @@
           "error",
           {
             "type": "element",
-            "prefix": "agrid",
+            "prefix": "app",
             "style": "kebab-case"
           }
         ]
