--- a/apps/webapp/Dockerfile
+++ b/apps/webapp/Dockerfile
@@ -1,12 +1,8 @@
-ARG ENVIRONMENT=staging
-
-FROM node:14.16.0-alpine AS builder
-COPY . /src
-ARG ENVIRONMENT
-WORKDIR /src
-RUN npm install && npm install -g @angular/cli
-RUN ng build --configuration=$ENVIRONMENT --output-path=/app
+FROM node:16.13.1-alpine AS builder
+COPY . /app
+WORKDIR /app
+RUN npm install && npm run postinstall
+RUN npx nx build webapp --configuration=production
 
 FROM nginx:1.19.8-alpine
-COPY --from=builder /src/nginx/default.conf /etc/nginx/conf.d/default.conf
-COPY --from=builder /app /usr/share/nginx/html
+COPY --from=builder /app/dist/apps/webservice /app
