switch to postgres and improve architecture

--- a/nx.json
+++ b/nx.json
@@ -33,6 +33,9 @@
     "common-entities": {
       "tags": []
     },
+    "common-enumerations": {
+      "tags": []
+    },
     "common-regexp": {
       "tags": []
     },
