--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -20,6 +20,9 @@
         "libs/angular-components-blockablediv/src/index.ts"
       ],
       "@workspace/common/entities": ["libs/common-entities/src/index.ts"],
+      "@workspace/common/enumerations": [
+        "libs/common-enumerations/src/index.ts"
+      ],
       "@workspace/common/extension/winston": [
         "libs/common-extension-winston/src/index.ts"
       ],
