--- a/ormconfig.json
+++ b/ormconfig.json
@@ -7,10 +7,11 @@
     "username": "loicbtd_agrid_local",
     "password": "K9jo4weZe&jmA8",
     "database": "loicbtd_agrid_local",
-    "entities": ["libs/common-entities/lib/*.entity.ts"],
+    "entities": ["libs/common-entities/src/lib/*.entity.ts"],
     "migrations": ["migration/*.ts"],
     "cli": {
-      "migrationsDir": "migration"
+      "migrationsDir": "migration",
+      "entitiesDir": "libs/common-entities/src/lib"
     }
   }
 ]
