--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "start:step1": "nx serve webservice",
     "start:step2": "wait-on tcp:3333 && nx serve webapp",
     "start": "run-p start:step1 start:step2",
+    "webapp": "nx serve webapp",
+    "webservice": "nx serve webservice",
     "postinstall": "ngcc --properties es2015 browser module main"
   },
   "private": true,
