--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@nestjs/typeorm": "^7.1.5",
     "@ngrx/effects": "^13.0.2",
     "@ngrx/entity": "^13.0.2",
+    "@ngrx/router-store": "^13.0.2",
     "@ngrx/store": "^13.0.2",
     "@stripe/stripe-js": "^1.21.2",
     "@types/accept-language-parser": "^1.5.3",
