--- a/package.json
+++ b/package.json
@@ -35,10 +35,8 @@
     "@nestjs/serve-static": "^2.1.4",
     "@nestjs/swagger": "^5.1.5",
     "@nestjs/typeorm": "^7.1.5",
-    "@ngrx/effects": "^13.0.2",
-    "@ngrx/entity": "^13.0.2",
-    "@ngrx/router-store": "^13.0.2",
-    "@ngrx/store": "^13.0.2",
+    "@ngxs/storage-plugin": "^3.7.3",
+    "@ngxs/store": "^3.7.3",
     "@stripe/stripe-js": "^1.21.2",
     "@types/accept-language-parser": "^1.5.3",
     "accept-language-parser": "^1.5.0",
@@ -87,6 +85,7 @@
     "@angular/language-service": "13.1.2",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
+    "@ngxs/devtools-plugin": "^3.7.3",
     "@nrwl/angular": "13.4.4",
     "@nrwl/cli": "13.4.4",
     "@nrwl/cypress": "13.4.4",
