--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "@nestjs/serve-static": "^2.1.4",
     "@nestjs/swagger": "^5.1.5",
     "@nestjs/typeorm": "^7.1.5",
+    "@ngx-translate/core": "^14.0.0",
+    "@ngx-translate/http-loader": "^7.0.0",
     "@ngxs/storage-plugin": "^3.7.3",
     "@ngxs/store": "^3.7.3",
     "@stripe/stripe-js": "^1.21.2",
@@ -55,7 +57,6 @@
     "helmet": "^4.4.1",
     "nest-winston": "^1.6.2",
     "nestjs-i18n": "^8.2.2",
-    "ngx-stripe": "^13.0.0",
     "nodemailer": "^6.5.0",
     "npm-run-all": "^4.1.5",
     "passport": "^0.4.1",
