--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start:step2": "wait-on tcp:3333 && nx serve webapp",
     "start": "run-p start:step1 start:step2",
     "webapp": "nx serve webapp",
-    "webservice": "nx serve webservice"
+    "webservice": "nx serve webservice",
+    "postinstall": "ngcc --properties es2015 browser module main"
   },
   "private": true,
   "dependencies": {
@@ -81,6 +82,7 @@
     "@angular-eslint/eslint-plugin": "13.0.1",
     "@angular-eslint/eslint-plugin-template": "13.0.1",
     "@angular-eslint/template-parser": "13.0.1",
+    "@angular/cli": "~13.1.0",
     "@angular/compiler-cli": "13.1.2",
     "@angular/language-service": "13.1.2",
     "@nestjs/schematics": "^8.0.0",
@@ -94,6 +96,7 @@
     "@nrwl/linter": "13.4.4",
     "@nrwl/nest": "13.4.4",
     "@nrwl/node": "13.4.4",
+    "@nrwl/storybook": "^13.5.1",
     "@nrwl/tao": "13.4.4",
     "@nrwl/workspace": "13.4.4",
     "@types/node": "14.14.33",
