--- a/package.json
+++ b/package.json
@@ -99,6 +99,10 @@
     "@nrwl/storybook": "^13.5.1",
     "@nrwl/tao": "13.4.4",
     "@nrwl/workspace": "13.4.4",
+    "@storybook/addon-essentials": "~6.4.12",
+    "@storybook/angular": "~6.4.12",
+    "@storybook/builder-webpack5": "~6.4.12",
+    "@storybook/manager-webpack5": "~6.4.12",
     "@types/node": "14.14.33",
     "@typescript-eslint/eslint-plugin": "5.3.1",
     "@typescript-eslint/parser": "5.3.1",
