--- a/apps/webservice/Dockerfile
+++ b/apps/webservice/Dockerfile
@@ -1,5 +1,5 @@
 FROM node:16.13.1-alpine AS builder
-COPY . /app
+COPY ./ /app
 WORKDIR /app
 RUN npm install && npm run postinstall
 RUN npx nx build webservice --configuration=production
