--- a/package.json
+++ b/package.json
@@ -88,17 +88,17 @@
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
     "@ngxs/devtools-plugin": "^3.7.3",
-    "@nrwl/angular": "13.4.4",
-    "@nrwl/cli": "13.4.4",
-    "@nrwl/cypress": "13.4.4",
-    "@nrwl/eslint-plugin-nx": "13.4.4",
-    "@nrwl/js": "13.4.4",
-    "@nrwl/linter": "13.4.4",
-    "@nrwl/nest": "13.4.4",
-    "@nrwl/node": "13.4.4",
-    "@nrwl/storybook": "^13.5.1",
-    "@nrwl/tao": "13.4.4",
-    "@nrwl/workspace": "13.4.4",
+    "@nrwl/angular": "13.5.1",
+    "@nrwl/cli": "13.5.1",
+    "@nrwl/cypress": "13.5.1",
+    "@nrwl/eslint-plugin-nx": "13.5.1",
+    "@nrwl/js": "13.5.1",
+    "@nrwl/linter": "13.5.1",
+    "@nrwl/nest": "13.5.1",
+    "@nrwl/node": "13.5.1",
+    "@nrwl/storybook": "13.5.1",
+    "@nrwl/tao": "13.5.1",
+    "@nrwl/workspace": "13.5.1",
     "@storybook/addon-essentials": "~6.4.12",
     "@storybook/angular": "~6.4.12",
     "@storybook/builder-webpack5": "~6.4.12",
@@ -115,8 +115,9 @@
     "postcss-import": "^14.0.2",
     "postcss-preset-env": "^6.7.0",
     "postcss-url": "^10.1.1",
-    "prettier": "^2.3.1",
+    "prettier": "2.5.1",
     "typescript": "4.5.4",
     "wait-on": "^5.3.0"
   }
 }
+
