--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "fastify": "^3.25.3",
     "fastify-cors": "^6.0.2",
     "fastify-helmet": "^6.0.0",
+    "fastify-raw-body": "^3.2.0",
     "fastify-swagger": "^4.12.6",
     "handlebars": "^4.7.7",
     "helmet": "^4.4.1",
