lcoal deployment using docker working

--- a/apps/webservice/Dockerfile
+++ b/apps/webservice/Dockerfile
@@ -1,11 +1,8 @@
-FROM node:16.13.1-alpine AS builder
-COPY ./ /app
+FROM node:16.13.1-alpine
+COPY . /app
 WORKDIR /app
 RUN npm install && npm run postinstall
-RUN npx nx build webservice --configuration=production
-
-FROM node:16.13.1-alpine
-COPY --from=builder /app/dist/apps/webservice /app
-WORKDIR /app
-EXPOSE 80
+RUN npx nx build webservice --configuration=development
+WORKDIR /app/dist/apps/webservice
+EXPOSE 3333
 CMD node main.js
