--- a/.github/workflows/deployment-webapp.yml
+++ b/.github/workflows/deployment-webapp.yml
@@ -1,5 +1,4 @@
-name: Docker Image CI
-
+name: "[Deployment] webapp"
 on:
   push:
     branches: [master, deployment/production]
@@ -13,7 +12,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: docker login
-        run: echo ${{ secrets.REGISTRY_PASSWORD }} | docker login -u ${{ secrets.REGISTRY_URL }} ${{ secrets.REGISTRY_USERNAME }} --password-stdin
+        run: echo ${{ secrets.REGISTRY_PASSWORD }} | docker login -u https://registry.agrid.ml ${{ secrets.REGISTRY_USERNAME }} --password-stdin
       # - name: docker build
       #   run: docker build -t :latest .
       # - name: Tag the Docker image
