--- a/.github/workflows/deployment-webapp.yml
+++ b/.github/workflows/deployment-webapp.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: docker login
-        run: echo ${{ secrets.REGISTRY_PASSWORD }} | docker login -u https://registry.agrid.ml/v2 ${{ secrets.REGISTRY_USERNAME }} --password-stdin
+        run: echo ${{ secrets.REGISTRY_PASSWORD }} | docker login https://registry.agrid.ml/v2 -u ${{ secrets.REGISTRY_USERNAME }} --password-stdin
       # - name: docker build
       #   run: docker build -t :latest .
       # - name: Tag the Docker image
