--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -2,6 +2,7 @@
   "compileOnSave": false,
   "compilerOptions": {
     "strictPropertyInitialization": false,
+    "forceConsistentCasingInFileNames": false,
     "rootDir": ".",
     "sourceMap": true,
     "declaration": false,
