--- a/.github/workflows/deployment-webapp.yml
+++ b/.github/workflows/deployment-webapp.yml
@@ -14,6 +14,6 @@ jobs:
       - name: docker login
         run: echo ${{ secrets.REGISTRY_PASSWORD }} | docker login https://registry.agrid.ml/v2 -u ${{ secrets.REGISTRY_USERNAME }} --password-stdin
       - name: docker build
-        run: docker build -f apps/webapp -t registry.agrid.ml/agrid-webapp:$(git rev-parse --short "$GITHUB_SHA") -t registry.agrid.ml/agrid-webapp:latest .
+        run: docker build -f apps/webapp -t registry.agrid.ml/agrid-webapp:$GITHUB_SHA -t registry.agrid.ml/agrid-webapp:latest .
       - name: docker push
         run: docker push registry.agrid.ml/agrid-webapp --all-tags
