--- a/.github/workflows/deployment-webapp.yml
+++ b/.github/workflows/deployment-webapp.yml
@@ -11,9 +11,9 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - name: docker login
-        run: echo ${{ secrets.REGISTRY_PASSWORD }} | docker login https://registry.agrid.ml/v2 -u ${{ secrets.REGISTRY_USERNAME }} --password-stdin
       - name: docker build
         run: docker build -f apps/webapp -t registry.agrid.ml/agrid-webapp:$GITHUB_SHA -t registry.agrid.ml/agrid-webapp:latest .
+      - name: docker login
+        run: echo ${{ secrets.REGISTRY_PASSWORD }} | docker login registry.agrid.ml -u ${{ secrets.REGISTRY_USERNAME }} --password-stdin
       - name: docker push
         run: docker push registry.agrid.ml/agrid-webapp --all-tags
