--- a/.github/workflows/deployment-webapp.yml
+++ b/.github/workflows/deployment-webapp.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: docker build
-        run: docker build -f apps/webapp -t registry.agrid.ml/agrid-webapp:$GITHUB_SHA -t registry.agrid.ml/agrid-webapp:latest .
+        run: docker build -f apps/webapp/Dockerfile -t registry.agrid.ml/agrid-webapp:$GITHUB_SHA -t registry.agrid.ml/agrid-webapp:latest .
       - name: docker login
         run: echo ${{ secrets.REGISTRY_PASSWORD }} | docker login registry.agrid.ml -u ${{ secrets.REGISTRY_USERNAME }} --password-stdin
       - name: docker push
