--- a/apps/webservice/Dockerfile
+++ b/apps/webservice/Dockerfile
@@ -2,7 +2,8 @@ FROM node:16.13.1-alpine
 COPY . /solution
 WORKDIR /solution
 RUN npm install && npm run postinstall
-RUN npx nx build webservice --configuration=development
+RUN npm run nx build -- webservice --configuration=production
+
 WORKDIR /solution/dist/apps/webservice
 EXPOSE 80
 CMD node main.js
