--- a/.github/workflows/deployment-webapp.yml
+++ b/.github/workflows/deployment-webapp.yml
@@ -1,9 +1,9 @@
-name: "[Deployment] webapp"
+name: '[Deployment] webapp'
 on:
   push:
-    branches: [master, deployment/production]
+    branches: [deployment/production]
   pull_request:
-    branches: [master, deployment/production]
+    branches: [deployment/production]
 
 jobs:
   build:
