--- a/stack.yaml
+++ b/stack.yaml
@@ -2,27 +2,8 @@ version: '3'
 
 services:
   base: &base
-    image: chatwoot/chatwoot:v2.1.1
+    image: chatwoot/chatwoot:v2.1.0
     environment:
-      - WEBSERVICE_PASSWORD_HASH_SALT=${WEBSERVICE_PASSWORD_HASH_SALT}
-      - WEBSERVICE_JWT_SECRET=${WEBSERVICE_JWT_SECRET}
-      - WEBSERVICE_JWT_EXPIRATION_TIME=${WEBSERVICE_JWT_EXPIRATION_TIME}
-      - WEBSERVICE_HOST=${WEBSERVICE_HOST}
-      - WEBSERVICE_PORT=${WEBSERVICE_PORT}
-      - WEBSERVICE_WEBAPP_URL=${WEBSERVICE_WEBAPP_URL}
-      - WEBSERVICE_EMAIL_SENDER_ADDRESS=${WEBSERVICE_EMAIL_SENDER_ADDRESS}
-      - WEBSERVICE_EMAIL_SENDER_NAME=${WEBSERVICE_EMAIL_SENDER_NAME}
-      - WEBSERVICE_EMAIL_SENDER_LOGIN=${WEBSERVICE_EMAIL_SENDER_LOGIN}
-      - WEBSERVICE_EMAIL_SENDER_PASSWORD=${WEBSERVICE_EMAIL_SENDER_PASSWORD}
-      - WEBSERVICE_EMAIL_SENDER_SMTP_HOST=${WEBSERVICE_EMAIL_SENDER_SMTP_HOST}
-      - WEBSERVICE_EMAIL_SENDER_SMTP_PORT=${WEBSERVICE_EMAIL_SENDER_SMTP_PORT}
-      - WEBSERVICE_DATABASE_HOST=${WEBSERVICE_DATABASE_HOST}
-      - WEBSERVICE_DATABASE_PORT=${WEBSERVICE_DATABASE_PORT}
-      - WEBSERVICE_DATABASE_NAME=${WEBSERVICE_DATABASE_NAME}
-      - WEBSERVICE_DATABASE_LOGIN=${WEBSERVICE_DATABASE_LOGIN}
-      - WEBSERVICE_DATABASE_PASSWORD=${WEBSERVICE_DATABASE_PASSWORD}
-      - WEBSERVICE_STRIPE_SECRET_KEY=${WEBSERVICE_STRIPE_SECRET_KEY}
-      - WEBSERVICE_STRIPE_PUBLISHABLE_KEY=${WEBSERVICE_STRIPE_PUBLISHABLE_KEY}
       - SECRET_KEY_BASE=${SECRET_KEY_BASE}
       - FRONTEND_URL=${FRONTEND_URL}
       - DEFAULT_LOCALE=${DEFAULT_LOCALE}
@@ -37,7 +18,6 @@ services:
       - POSTGRES_HOST=${POSTGRES_HOST}
       - POSTGRES_USERNAME=${POSTGRES_USERNAME}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      - RAILS_ENV=${RAILS_ENV}
       - RAILS_MAX_THREADS=${RAILS_MAX_THREADS}
       - MAILER_SENDER_EMAIL=${MAILER_SENDER_EMAIL}
       - SMTP_DOMAIN=${SMTP_DOMAIN}
@@ -87,6 +67,55 @@ services:
       - NODE_ENV=production
       - RAILS_ENV=production
       - INSTALLATION_ENV=docker
+      - SECRET_KEY_BASE=${SECRET_KEY_BASE}
+      - FRONTEND_URL=${FRONTEND_URL}
+      - DEFAULT_LOCALE=${DEFAULT_LOCALE}
+      - DISABLE_TELEMETRY=${DISABLE_TELEMETRY}
+      - ASSET_CDN_HOST=${ASSET_CDN_HOST}
+      - FORCE_SSL=${FORCE_SSL}
+      - ENABLE_ACCOUNT_SIGNUP=${ENABLE_ACCOUNT_SIGNUP}
+      - REDIS_URL=${REDIS_URL}
+      - REDIS_PASSWORD=${REDIS_PASSWORD}
+      - REDIS_SENTINELS=${REDIS_SENTINELS}
+      - REDIS_SENTINEL_MASTER_NAME=${REDIS_SENTINEL_MASTER_NAME}
+      - POSTGRES_HOST=${POSTGRES_HOST}
+      - POSTGRES_USERNAME=${POSTGRES_USERNAME}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - RAILS_MAX_THREADS=${RAILS_MAX_THREADS}
+      - MAILER_SENDER_EMAIL=${MAILER_SENDER_EMAIL}
+      - SMTP_DOMAIN=${SMTP_DOMAIN}
+      - SMTP_ADDRESS=${SMTP_ADDRESS}
+      - SMTP_PORT=${SMTP_PORT}
+      - SMTP_OPENSSL_VERIFY_MODE=${SMTP_OPENSSL_VERIFY_MODE}
+      - SMTP_TLS=${SMTP_TLS}
+      - MAILER_INBOUND_EMAIL_DOMAIN=${MAILER_INBOUND_EMAIL_DOMAIN}
+      - RAILS_INBOUND_EMAIL_SERVICE=${RAILS_INBOUND_EMAIL_SERVICE}
+      - RAILS_INBOUND_EMAIL_PASSWORD=${RAILS_INBOUND_EMAIL_PASSWORD}
+      - MAILGUN_INGRESS_SIGNING_KEY=${MAILGUN_INGRESS_SIGNING_KEY}
+      - MANDRILL_INGRESS_API_KEY=${MANDRILL_INGRESS_API_KEY}
+      - ACTIVE_STORAGE_SERVICE=${ACTIVE_STORAGE_SERVICE}
+      - S3_BUCKET_NAME=${S3_BUCKET_NAME}
+      - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
+      - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
+      - AWS_REGION=${AWS_REGION}
+      - RAILS_LOG_TO_STDOUT=${RAILS_LOG_TO_STDOUT}
+      - LOG_LEVEL=${LOG_LEVEL}
+      - LOG_SIZE=${LOG_SIZE}
+      - FB_VERIFY_TOKEN=${FB_VERIFY_TOKEN}
+      - FB_APP_SECRET=${FB_APP_SECRET}
+      - FB_APP_ID=${FB_APP_ID}
+      - IG_VERIFY_TOKEN=${IG_VERIFY_TOKEN}
+      - TWITTER_APP_ID=${TWITTER_APP_ID}
+      - TWITTER_CONSUMER_KEY=${TWITTER_CONSUMER_KEY}
+      - TWITTER_CONSUMER_SECRET=${TWITTER_CONSUMER_SECRET}
+      - TWITTER_ENVIRONMENT=${TWITTER_ENVIRONMENT}
+      - SLACK_CLIENT_ID=${SLACK_CLIENT_ID}
+      - SLACK_CLIENT_SECRET=${SLACK_CLIENT_SECRET}
+      - IOS_APP_ID=${IOS_APP_ID}
+      - ANDROID_BUNDLE_ID=${ANDROID_BUNDLE_ID}
+      - ANDROID_SHA256_CERT_FINGERPRINT=${ANDROID_SHA256_CERT_FINGERPRINT}
+      - USE_INBOX_AVATAR_FOR_BOT=${USE_INBOX_AVATAR_FOR_BOT}
+      - ENABLE_PUSH_RELAY_SERVER=${ENABLE_PUSH_RELAY_SERVER}
     entrypoint: docker/entrypoints/rails.sh
     command: ['bundle', 'exec', 'rails', 's', '-p', '3000', '-b', '0.0.0.0']
 
@@ -99,6 +128,55 @@ services:
       - NODE_ENV=production
       - RAILS_ENV=production
       - INSTALLATION_ENV=docker
+      - SECRET_KEY_BASE=${SECRET_KEY_BASE}
+      - FRONTEND_URL=${FRONTEND_URL}
+      - DEFAULT_LOCALE=${DEFAULT_LOCALE}
+      - DISABLE_TELEMETRY=${DISABLE_TELEMETRY}
+      - ASSET_CDN_HOST=${ASSET_CDN_HOST}
+      - FORCE_SSL=${FORCE_SSL}
+      - ENABLE_ACCOUNT_SIGNUP=${ENABLE_ACCOUNT_SIGNUP}
+      - REDIS_URL=${REDIS_URL}
+      - REDIS_PASSWORD=${REDIS_PASSWORD}
+      - REDIS_SENTINELS=${REDIS_SENTINELS}
+      - REDIS_SENTINEL_MASTER_NAME=${REDIS_SENTINEL_MASTER_NAME}
+      - POSTGRES_HOST=${POSTGRES_HOST}
+      - POSTGRES_USERNAME=${POSTGRES_USERNAME}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - RAILS_MAX_THREADS=${RAILS_MAX_THREADS}
+      - MAILER_SENDER_EMAIL=${MAILER_SENDER_EMAIL}
+      - SMTP_DOMAIN=${SMTP_DOMAIN}
+      - SMTP_ADDRESS=${SMTP_ADDRESS}
+      - SMTP_PORT=${SMTP_PORT}
+      - SMTP_OPENSSL_VERIFY_MODE=${SMTP_OPENSSL_VERIFY_MODE}
+      - SMTP_TLS=${SMTP_TLS}
+      - MAILER_INBOUND_EMAIL_DOMAIN=${MAILER_INBOUND_EMAIL_DOMAIN}
+      - RAILS_INBOUND_EMAIL_SERVICE=${RAILS_INBOUND_EMAIL_SERVICE}
+      - RAILS_INBOUND_EMAIL_PASSWORD=${RAILS_INBOUND_EMAIL_PASSWORD}
+      - MAILGUN_INGRESS_SIGNING_KEY=${MAILGUN_INGRESS_SIGNING_KEY}
+      - MANDRILL_INGRESS_API_KEY=${MANDRILL_INGRESS_API_KEY}
+      - ACTIVE_STORAGE_SERVICE=${ACTIVE_STORAGE_SERVICE}
+      - S3_BUCKET_NAME=${S3_BUCKET_NAME}
+      - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
+      - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
+      - AWS_REGION=${AWS_REGION}
+      - RAILS_LOG_TO_STDOUT=${RAILS_LOG_TO_STDOUT}
+      - LOG_LEVEL=${LOG_LEVEL}
+      - LOG_SIZE=${LOG_SIZE}
+      - FB_VERIFY_TOKEN=${FB_VERIFY_TOKEN}
+      - FB_APP_SECRET=${FB_APP_SECRET}
+      - FB_APP_ID=${FB_APP_ID}
+      - IG_VERIFY_TOKEN=${IG_VERIFY_TOKEN}
+      - TWITTER_APP_ID=${TWITTER_APP_ID}
+      - TWITTER_CONSUMER_KEY=${TWITTER_CONSUMER_KEY}
+      - TWITTER_CONSUMER_SECRET=${TWITTER_CONSUMER_SECRET}
+      - TWITTER_ENVIRONMENT=${TWITTER_ENVIRONMENT}
+      - SLACK_CLIENT_ID=${SLACK_CLIENT_ID}
+      - SLACK_CLIENT_SECRET=${SLACK_CLIENT_SECRET}
+      - IOS_APP_ID=${IOS_APP_ID}
+      - ANDROID_BUNDLE_ID=${ANDROID_BUNDLE_ID}
+      - ANDROID_SHA256_CERT_FINGERPRINT=${ANDROID_SHA256_CERT_FINGERPRINT}
+      - USE_INBOX_AVATAR_FOR_BOT=${USE_INBOX_AVATAR_FOR_BOT}
+      - ENABLE_PUSH_RELAY_SERVER=${ENABLE_PUSH_RELAY_SERVER}
     command: ['bundle', 'exec', 'sidekiq', '-C', 'config/sidekiq.yml']
 
   postgres:
@@ -117,25 +195,6 @@ services:
     restart: always
     command: ["sh", "-c", "redis-server --requirepass \"$REDIS_PASSWORD\""]
     environment:
-      - WEBSERVICE_PASSWORD_HASH_SALT=${WEBSERVICE_PASSWORD_HASH_SALT}
-      - WEBSERVICE_JWT_SECRET=${WEBSERVICE_JWT_SECRET}
-      - WEBSERVICE_JWT_EXPIRATION_TIME=${WEBSERVICE_JWT_EXPIRATION_TIME}
-      - WEBSERVICE_HOST=${WEBSERVICE_HOST}
-      - WEBSERVICE_PORT=${WEBSERVICE_PORT}
-      - WEBSERVICE_WEBAPP_URL=${WEBSERVICE_WEBAPP_URL}
-      - WEBSERVICE_EMAIL_SENDER_ADDRESS=${WEBSERVICE_EMAIL_SENDER_ADDRESS}
-      - WEBSERVICE_EMAIL_SENDER_NAME=${WEBSERVICE_EMAIL_SENDER_NAME}
-      - WEBSERVICE_EMAIL_SENDER_LOGIN=${WEBSERVICE_EMAIL_SENDER_LOGIN}
-      - WEBSERVICE_EMAIL_SENDER_PASSWORD=${WEBSERVICE_EMAIL_SENDER_PASSWORD}
-      - WEBSERVICE_EMAIL_SENDER_SMTP_HOST=${WEBSERVICE_EMAIL_SENDER_SMTP_HOST}
-      - WEBSERVICE_EMAIL_SENDER_SMTP_PORT=${WEBSERVICE_EMAIL_SENDER_SMTP_PORT}
-      - WEBSERVICE_DATABASE_HOST=${WEBSERVICE_DATABASE_HOST}
-      - WEBSERVICE_DATABASE_PORT=${WEBSERVICE_DATABASE_PORT}
-      - WEBSERVICE_DATABASE_NAME=${WEBSERVICE_DATABASE_NAME}
-      - WEBSERVICE_DATABASE_LOGIN=${WEBSERVICE_DATABASE_LOGIN}
-      - WEBSERVICE_DATABASE_PASSWORD=${WEBSERVICE_DATABASE_PASSWORD}
-      - WEBSERVICE_STRIPE_SECRET_KEY=${WEBSERVICE_STRIPE_SECRET_KEY}
-      - WEBSERVICE_STRIPE_PUBLISHABLE_KEY=${WEBSERVICE_STRIPE_PUBLISHABLE_KEY}
       - SECRET_KEY_BASE=${SECRET_KEY_BASE}
       - FRONTEND_URL=${FRONTEND_URL}
       - DEFAULT_LOCALE=${DEFAULT_LOCALE}
@@ -150,7 +209,6 @@ services:
       - POSTGRES_HOST=${POSTGRES_HOST}
       - POSTGRES_USERNAME=${POSTGRES_USERNAME}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      - RAILS_ENV=${RAILS_ENV}
       - RAILS_MAX_THREADS=${RAILS_MAX_THREADS}
       - MAILER_SENDER_EMAIL=${MAILER_SENDER_EMAIL}
       - SMTP_DOMAIN=${SMTP_DOMAIN}
@@ -188,3 +246,5 @@ services:
       - ENABLE_PUSH_RELAY_SERVER=${ENABLE_PUSH_RELAY_SERVER}
     volumes:
       - /data/redis:/data
+    ports:
+      - "6379:6379"
