--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@nestjs/typeorm": "^7.1.5",
     "@ngx-translate/core": "^14.0.0",
     "@ngx-translate/http-loader": "^7.0.0",
+    "@ngxs/router-plugin": "^3.7.3",
     "@ngxs/storage-plugin": "^3.7.3",
     "@ngxs/store": "^3.7.3",
     "@stripe/stripe-js": "^1.21.2",
