add subscription workflow

--- a/.github/workflows/deployment-webservice.yml
+++ b/.github/workflows/deployment-webservice.yml
@@ -1,7 +1,7 @@
 name: '[Deployment] webservice'
 on:
   push:
-    branches: [deployment/production]
+    branches: [master, deployment/production]
 
 jobs:
   build:
