--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "fastify-helmet": "^6.0.0",
     "fastify-raw-body": "^3.2.0",
     "fastify-swagger": "^4.12.6",
+    "generate-password": "^1.7.0",
     "handlebars": "^4.7.7",
     "helmet": "^4.4.1",
     "nest-winston": "^1.6.2",
